tc_tests/intptr3.fail
int main()
{
	int *a;
	int b;
  int *bb;
	char *c;
	char d;

	a = &b;
	bb = &b;
	*a = 5;

  a = *9; //error

 // b = a > 9; //warning
 // b = a == 53; //warning
 // b = a == c; //warning


	return b;
}
